--- a/TaskManager/appsettings.Development.json
+++ b/TaskManager/appsettings.Development.json
@@ -5,4 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   }
+  "ConnectionStrings": {
+    "DataBase": "Host=localhost;Port=5432;Database=TaskManager;Username=postgres;Password=Rfhnvfy01"
+  }
 }
